# Source/Persistance/mongooseAdapter/schemas/index.js
@@ -1,9 +1,5 @@
-const bands = require('./bands.schemas');
-const concerts = require('./concerts.schemas');
-const venues = require('./venues.schemas');
+const messages = require('./messages.schemas');
 
 module.exports = {
-    bands,
-    concerts,
-    venues,
+    messages,
 };
